--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-act": "^1.5.1",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
